# Sly2Decomp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Sly2Decomp.sln
Sly2Decomp/: CMakeLists.txt  Sly2Decomp.cpp  Sly2Decomp.sln  Sly2Decomp.vcxproj  Sly2Decomp.vcxproj.filters
Sly2Decomp/common/: CMakeLists.txt  ps2_constants.h  versions.cpp  versions.h
Sly2Decomp/common/audio/: audio_formats.cpp
Sly2Decomp/common/dma/: dma.h  dma_copy.cpp
Sly2Decomp/common/log/: log.cpp  log.h
Sly2Decomp/common/math/: Vector.h
Sly2Decomp/common/util/: FileUtil.cpp  FileUtil.h  FrameLimiter.cpp  SmallVector.h  Timer.h  compress.cpp  json_util.h  read_iso_file.h
Sly2Decomp/game/: DebugGui.cpp  Display.cpp  Display.h  Graphics.cpp  Graphics.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Peripherals.cpp  Peripherals.h  opengl.cpp  opengl.h  opengl_utils.cpp  opengl_utils.h
